@@ -1,5 +1,6 @@
 20XX-XX-XX   2.6.2:
 -------------------
+  * optimize `richcompare()` for opposite endianness
 
 
 2022-12-18   2.6.1:
